[package]
name = "rust"
version = "0.1.0"
edition = "2021"
default-run = "name_converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-leet = { git = "https://github.com/rust-practice/cargo-leet.git", branch = "main" }
nom = "*"
regex = "*"
#Old version used because or old version of rust on leetcode
rstest = "0.12.0"
